[gd_scene load_steps=10 format=2]

[ext_resource path="res://Background/Map.tscn" type="PackedScene" id=1]
[ext_resource path="res://Unit.tscn" type="PackedScene" id=2]
[ext_resource path="res://Units/valkyrie_basic.png" type="Texture" id=3]
[ext_resource path="res://GameBoard/Gameboard.gd" type="Script" id=4]
[ext_resource path="res://Utility/UnitOverlay.tscn" type="PackedScene" id=5]
[ext_resource path="res://Units/armor_basic.png" type="Texture" id=6]
[ext_resource path="res://Utility/UnitPath.tscn" type="PackedScene" id=7]
[ext_resource path="res://Units/flier_basic.png" type="Texture" id=8]
[ext_resource path="res://Utility/Cursor.tscn" type="PackedScene" id=9]

[node name="Main" type="Node2D"]

[node name="Map" parent="." instance=ExtResource( 1 )]
tile_data = PoolIntArray( -65539, 2, 0, -65538, 2, 1, -65537, 2, 1, -131072, 2, 1, -131071, 2, 1, -131070, 2, 1, -131069, 2, 1, -131068, 2, 1, -131067, 2, 1, -131066, 2, 1, -131065, 2, 1, -131064, 2, 1, -131063, 2, 1, -131062, 2, 1, -131061, 2, 1, -131060, 2, 1, -131059, 2, 1, -131058, 2, 1, -131057, 2, 1, -131056, 2, 1, -131055, 2, 1, -131054, 2, 1, -131053, 2, 1, -131052, 2, 1, -131051, 2, 1, -131050, 2, 1, -131049, 2, 1, -131048, 2, 1, -131047, 2, 1, -131046, 2, 1, -131045, 2, 2, -3, 2, 65536, -2, 2, 65537, -1, 2, 0, -65536, 2, 131073, -65535, 2, 131073, -65534, 2, 131073, -65533, 2, 131073, -65532, 2, 131073, -65531, 2, 131073, -65530, 2, 131073, -65529, 2, 131073, -65528, 2, 131073, -65527, 2, 131073, -65526, 2, 131073, -65525, 2, 131073, -65524, 2, 131073, -65523, 2, 131073, -65522, 2, 131073, -65521, 2, 131073, -65520, 2, 131073, -65519, 2, 131073, -65518, 2, 131073, -65517, 2, 131073, -65516, 2, 131073, -65515, 2, 131073, -65514, 2, 131073, -65513, 2, 131073, -65512, 2, 131073, -65511, 2, 0, -65510, 2, 65537, -65509, 2, 65538, 65533, 2, 65536, 65534, 2, 65537, 65535, 2, 65538, 0, 0, 0, 1, 0, 196608, 2, 0, 196608, 3, 0, 65536, 4, 0, 196608, 5, 0, 196608, 6, 0, 0, 7, 0, 65536, 8, 0, 65536, 9, 0, 196608, 10, 0, 131072, 11, 0, 196608, 12, 0, 65536, 13, 0, 0, 14, 0, 0, 15, 0, 196608, 16, 0, 65536, 17, 0, 65536, 18, 0, 0, 19, 0, 65536, 20, 0, 0, 21, 0, 131072, 22, 0, 131072, 23, 0, 131072, 24, 0, 0, 25, 2, 65536, 26, 2, 65537, 27, 2, 65538, 131069, 2, 65536, 131070, 2, 65537, 131071, 2, 65538, 65536, 0, 131072, 65537, 0, 196608, 65538, 0, 196608, 65539, 0, 0, 65540, 0, 0, 65541, 0, 65536, 65542, 0, 65536, 65543, 0, 131072, 65544, 0, 196608, 65545, 0, 65536, 65546, 0, 196608, 65547, 0, 196608, 65548, 0, 0, 65549, 0, 131072, 65550, 0, 0, 65551, 0, 131072, 65552, 0, 131072, 65553, 0, 131072, 65554, 0, 0, 65555, 0, 196608, 65556, 0, 196608, 65557, 0, 196608, 65558, 0, 65536, 65559, 0, 196608, 65560, 0, 196608, 65561, 2, 65536, 65562, 2, 65537, 65563, 2, 65538, 196605, 2, 65536, 196606, 2, 65537, 196607, 2, 65538, 131072, 0, 65536, 131073, 0, 0, 131074, 0, 65536, 131075, 0, 196608, 131076, 0, 131072, 131077, 0, 131072, 131078, 0, 196608, 131079, 0, 131072, 131080, 0, 0, 131081, 0, 0, 131082, 0, 131072, 131083, 0, 0, 131084, 0, 131072, 131085, 0, 196608, 131086, 0, 196608, 131087, 0, 0, 131088, 0, 131072, 131089, 0, 0, 131090, 0, 65536, 131091, 0, 131072, 131092, 0, 65536, 131093, 0, 0, 131094, 0, 131072, 131095, 0, 196608, 131096, 0, 131072, 131097, 2, 65536, 131098, 2, 65537, 131099, 2, 65538, 262141, 2, 65536, 262142, 2, 65537, 262143, 2, 65538, 196608, 0, 196608, 196609, 0, 131072, 196610, 0, 0, 196611, 0, 0, 196612, 0, 196608, 196613, 0, 131072, 196614, 0, 131072, 196615, 0, 196608, 196616, 0, 131072, 196617, 0, 131072, 196618, 0, 196608, 196619, 0, 196608, 196620, 0, 0, 196621, 0, 0, 196622, 1, 0, 196623, 1, 2, 196624, 0, 65536, 196625, 0, 65536, 196626, 0, 196608, 196627, 0, 0, 196628, 0, 0, 196629, 0, 196608, 196630, 0, 65536, 196631, 0, 0, 196632, 0, 131072, 196633, 2, 65536, 196634, 2, 65537, 196635, 2, 65538, 327677, 2, 65536, 327678, 2, 65537, 327679, 2, 65538, 262144, 0, 196608, 262145, 0, 0, 262146, 0, 65536, 262147, 0, 131072, 262148, 0, 0, 262149, 0, 196608, 262150, 0, 131072, 262151, 0, 131072, 262152, 0, 131072, 262153, 2, 0, 262154, 2, 1, 262155, 2, 1, 262156, 2, 2, 262157, 0, 0, 262158, 1, 65536, 262159, 1, 65538, 262160, 0, 0, 262161, 0, 196608, 262162, 0, 0, 262163, 0, 131072, 262164, 0, 0, 262165, 0, 0, 262166, 0, 196608, 262167, 0, 196608, 262168, 0, 131072, 262169, 2, 65536, 262170, 2, 65537, 262171, 2, 65538, 393213, 2, 65536, 393214, 2, 65537, 393215, 2, 65538, 327680, 0, 131072, 327681, 0, 131072, 327682, 0, 0, 327683, 0, 65536, 327684, 0, 0, 327685, 0, 0, 327686, 0, 131072, 327687, 0, 0, 327688, 0, 0, 327689, 2, 65536, 327690, 2, 65537, 327691, 2, 65537, 327692, 2, 65538, 327693, 0, 65536, 327694, 1, 65536, 327695, 1, 65538, 327696, 0, 131072, 327697, 0, 0, 327698, 0, 196608, 327699, 0, 65536, 327700, 0, 0, 327701, 0, 196608, 327702, 0, 65536, 327703, 0, 65536, 327704, 0, 131072, 327705, 2, 65536, 327706, 2, 65537, 327707, 2, 65538, 458749, 2, 65536, 458750, 2, 65537, 458751, 2, 65538, 393216, 0, 196608, 393217, 0, 196608, 393218, 0, 65536, 393219, 0, 65536, 393220, 0, 196608, 393221, 0, 65536, 393222, 0, 65536, 393223, 0, 196608, 393224, 0, 65536, 393225, 2, 65536, 393226, 2, 65537, 393227, 2, 65537, 393228, 2, 65538, 393229, 0, 196608, 393230, 1, 65536, 393231, 1, 65538, 393232, 0, 0, 393233, 0, 0, 393234, 0, 65536, 393235, 0, 131072, 393236, 0, 0, 393237, 0, 131072, 393238, 0, 131072, 393239, 0, 0, 393240, 0, 196608, 393241, 2, 65536, 393242, 2, 65537, 393243, 2, 65538, 524285, 2, 65536, 524286, 2, 65537, 524287, 2, 65538, 458752, 0, 0, 458753, 0, 196608, 458754, 0, 65536, 458755, 0, 65536, 458756, 0, 196608, 458757, 0, 0, 458758, 0, 65536, 458759, 0, 131072, 458760, 0, 196608, 458761, 2, 131072, 458762, 2, 131073, 458763, 2, 131073, 458764, 2, 131074, 458765, 0, 0, 458766, 1, 65536, 458767, 1, 65538, 458768, 0, 65536, 458769, 0, 131072, 458770, 0, 0, 458771, 0, 131072, 458772, 0, 196608, 458773, 0, 131072, 458774, 0, 0, 458775, 0, 131072, 458776, 0, 65536, 458777, 2, 65536, 458778, 2, 65537, 458779, 2, 65538, 589821, 2, 65536, 589822, 2, 65537, 589823, 2, 65538, 524288, 0, 0, 524289, 0, 0, 524290, 0, 65536, 524291, 0, 0, 524292, 0, 131072, 524293, 0, 65536, 524294, 0, 196608, 524295, 0, 131072, 524296, 0, 65536, 524297, 0, 131072, 524298, 0, 0, 524299, 0, 0, 524300, 0, 65536, 524301, 0, 196608, 524302, 1, 65536, 524303, 1, 65538, 524304, 0, 196608, 524305, 0, 65536, 524306, 0, 196608, 524307, 0, 0, 524308, 0, 0, 524309, 0, 196608, 524310, 0, 65536, 524311, 0, 131072, 524312, 0, 131072, 524313, 2, 65536, 524314, 2, 65537, 524315, 2, 65538, 655357, 2, 65536, 655358, 2, 65537, 655359, 2, 65538, 589824, 0, 0, 589825, 0, 65536, 589826, 0, 65536, 589827, 0, 65536, 589828, 0, 65536, 589829, 1, 0, 589830, 1, 1, 589831, 1, 1, 589832, 1, 1, 589833, 1, 1, 589834, 1, 1, 589835, 1, 1, 589836, 1, 1, 589837, 1, 1, 589838, 1, 262145, 589839, 1, 262144, 589840, 1, 1, 589841, 1, 1, 589842, 1, 1, 589843, 1, 1, 589844, 1, 1, 589845, 1, 2, 589846, 0, 0, 589847, 0, 0, 589848, 0, 0, 589849, 2, 65536, 589850, 2, 65537, 589851, 2, 65538, 720893, 2, 65536, 720894, 2, 65537, 720895, 2, 65538, 655360, 0, 131072, 655361, 0, 131072, 655362, 0, 196608, 655363, 0, 131072, 655364, 0, 0, 655365, 1, 131072, 655366, 1, 131073, 655367, 1, 131073, 655368, 1, 131073, 655369, 1, 131073, 655370, 1, 131073, 655371, 1, 131073, 655372, 1, 131073, 655373, 1, 131073, 655374, 1, 131073, 655375, 1, 131073, 655376, 1, 131073, 655377, 1, 131073, 655378, 1, 131073, 655379, 1, 131073, 655380, 1, 131073, 655381, 1, 131074, 655382, 0, 65536, 655383, 0, 131072, 655384, 0, 65536, 655385, 2, 65536, 655386, 2, 65537, 655387, 2, 65538, 786429, 2, 65536, 786430, 2, 65537, 786431, 2, 65538, 720896, 0, 0, 720897, 0, 0, 720898, 0, 65536, 720899, 0, 0, 720900, 0, 65536, 720901, 0, 131072, 720902, 0, 196608, 720903, 0, 131072, 720904, 0, 65536, 720905, 0, 196608, 720906, 0, 65536, 720907, 0, 131072, 720908, 0, 65536, 720909, 0, 196608, 720910, 0, 65536, 720911, 0, 65536, 720912, 0, 131072, 720913, 0, 65536, 720914, 0, 0, 720915, 0, 131072, 720916, 0, 131072, 720917, 0, 131072, 720918, 0, 65536, 720919, 0, 196608, 720920, 0, 196608, 720921, 2, 65536, 720922, 2, 65537, 720923, 2, 65538, 851965, 2, 65536, 851966, 2, 65537, 851967, 2, 65538, 786432, 0, 131072, 786433, 0, 131072, 786434, 0, 0, 786435, 0, 0, 786436, 0, 131072, 786437, 0, 0, 786438, 0, 131072, 786439, 0, 0, 786440, 0, 196608, 786441, 0, 196608, 786442, 0, 131072, 786443, 0, 0, 786444, 0, 131072, 786445, 0, 196608, 786446, 0, 65536, 786447, 0, 65536, 786448, 0, 196608, 786449, 0, 0, 786450, 0, 0, 786451, 0, 196608, 786452, 0, 196608, 786453, 0, 131072, 786454, 0, 131072, 786455, 0, 196608, 786456, 0, 0, 786457, 2, 65536, 786458, 2, 65537, 786459, 2, 65538, 917501, 2, 65536, 917502, 2, 65537, 917503, 2, 65538, 851968, 0, 65536, 851969, 0, 0, 851970, 0, 131072, 851971, 0, 65536, 851972, 0, 196608, 851973, 0, 196608, 851974, 0, 65536, 851975, 0, 0, 851976, 0, 131072, 851977, 0, 65536, 851978, 0, 65536, 851979, 0, 131072, 851980, 0, 65536, 851981, 0, 196608, 851982, 0, 196608, 851983, 0, 65536, 851984, 0, 0, 851985, 0, 196608, 851986, 0, 65536, 851987, 0, 0, 851988, 0, 196608, 851989, 0, 65536, 851990, 0, 0, 851991, 0, 65536, 851992, 0, 0, 851993, 2, 65536, 851994, 2, 65537, 851995, 2, 65538, 983037, 2, 65536, 983038, 2, 65537, 983039, 2, 0, 917504, 2, 1, 917505, 2, 1, 917506, 2, 1, 917507, 2, 1, 917508, 2, 1, 917509, 2, 1, 917510, 2, 1, 917511, 2, 1, 917512, 2, 1, 917513, 2, 1, 917514, 2, 1, 917515, 2, 1, 917516, 2, 1, 917517, 2, 1, 917518, 2, 1, 917519, 2, 1, 917520, 2, 1, 917521, 2, 1, 917522, 2, 1, 917523, 2, 1, 917524, 2, 1, 917525, 2, 1, 917526, 2, 1, 917527, 2, 1, 917528, 2, 1, 917529, 2, 0, 917530, 2, 65537, 917531, 2, 65538, 1048573, 2, 131072, 1048574, 2, 131073, 1048575, 2, 131073, 983040, 2, 131073, 983041, 2, 131073, 983042, 2, 131073, 983043, 2, 131073, 983044, 2, 131073, 983045, 2, 131073, 983046, 2, 131073, 983047, 2, 131073, 983048, 2, 131073, 983049, 2, 131073, 983050, 2, 131073, 983051, 2, 131073, 983052, 2, 131073, 983053, 2, 131073, 983054, 2, 131073, 983055, 2, 131073, 983056, 2, 131073, 983057, 2, 131073, 983058, 2, 131073, 983059, 2, 131073, 983060, 2, 131073, 983061, 2, 131073, 983062, 2, 131073, 983063, 2, 131073, 983064, 2, 131073, 983065, 2, 131073, 983066, 2, 131073, 983067, 2, 131074 )

[node name="Gameboard" type="YSort" parent="."]
script = ExtResource( 4 )
map_tiles_path = NodePath("../Map")

[node name="UnitOverlay" parent="Gameboard" instance=ExtResource( 5 )]
cell_size = Vector2( 64, 64 )

[node name="UnitPath" parent="Gameboard" instance=ExtResource( 7 )]
visible = false

[node name="Armor" parent="Gameboard" instance=ExtResource( 2 )]
position = Vector2( 984, 288 )
movement_type = 1
skin = ExtResource( 6 )
move_speed = 300.0

[node name="Flier" parent="Gameboard" instance=ExtResource( 2 )]
position = Vector2( 480, 480 )
movement_type = 2
move_range = 8
skin = ExtResource( 8 )
move_speed = 900.0

[node name="Valkyrie" parent="Gameboard" instance=ExtResource( 2 )]
position = Vector2( 288, 288 )
movement_type = 3
move_range = 8
skin = ExtResource( 3 )

[node name="Cursor" parent="Gameboard" instance=ExtResource( 9 )]

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_lock_": true
}

[connection signal="accept_pressed" from="Gameboard/Cursor" to="Gameboard" method="_on_Cursor_accept_pressed"]
[connection signal="moved" from="Gameboard/Cursor" to="Gameboard" method="_on_Cursor_moved"]
